# LinkSwift-Desktop

./: DEVELOPMENT.md  LinkSwift_代码分析报告.docx  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
linkswift-desktop/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
linkswift-desktop/.github/workflows/: ci.yml  release.yml
linkswift-desktop/src/: App.css  App.tsx  index.css  main.tsx
linkswift-desktop/src-tauri/: Cargo.toml  tauri.conf.json
linkswift-desktop/src-tauri/src/: error.rs  lib.rs  main.rs
linkswift-desktop/src-tauri/src/commands/: auth.rs  config.rs  mod.rs  quark.rs  rpc.rs
linkswift-desktop/src-tauri/src/models/: config.rs  file.rs  mod.rs  share.rs  task.rs
linkswift-desktop/src-tauri/src/services/: config_service.rs  crypto.rs  mod.rs  quark_api.rs  rpc_client.rs  task_queue.rs
linkswift-desktop/src-tauri/tests/: commands_test.rs  config_service_test.rs  models_test.rs  quark_api_test.rs  rpc_client_test.rs  task_queue_test.rs
linkswift-desktop/src/components/: FileList.tsx  FirstRunWizard.tsx  LinkInput.tsx  Settings.tsx  TaskQueue.tsx
linkswift-desktop/src/lib/: utils.ts
linkswift-desktop/src/stores/: appStore.ts
linkswift-desktop/src/types/: index.ts
linkswift-desktop/test-results/: generate-report.sh  vitest-results.json
linkswift-desktop/tests/: App.test.tsx  command-registry.test.ts  store.test.ts  types.test.ts  utils.test.ts
linkswift-desktop/tests/components/: FileList.test.tsx  FirstRunWizard.test.tsx  LinkInput.test.tsx  Settings.test.tsx  TaskQueue.test.tsx
