[package]
name = "linkswift-desktop"
version = "0.1.0"
description = "LinkSwift Desktop - 网盘分享链接转存与RPC下载工具"
authors = ["LinkSwift"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"

[dev-dependencies]
mockito = "1"
tempfile = "3"
test-log = "0.2"
env_logger = "0.11"
pretty_assertions = "1"

[[test]]
name = "models"
path = "tests/models_test.rs"

[[test]]
name = "config_service"
path = "tests/config_service_test.rs"

[[test]]
name = "quark_api"
path = "tests/quark_api_test.rs"

[[test]]
name = "rpc_client"
path = "tests/rpc_client_test.rs"

[[test]]
name = "commands"
path = "tests/commands_test.rs"
